[package]
name = "flop"
version = "0.0.3"
authors = ["SpiveeWorks <spiveehere@gmail.com>"]

[build-dependencies]
lalrpop = "0.15.2"

[dependencies]
lalrpop-util = "0.15.2"
regex = "0.2.1"
totem_cell = { "git" = "https://github.com/spiveeworks/totem_cell" }
sulphate-lib = { git = "https://github.com/spiveeworks/sulphate" }
